Alignment and sizing issues
Sizing issue for Navbar is fixed, same for landing content.

--- a/app/components/landing/Landing.css
+++ b/app/components/landing/Landing.css
@@ -9,10 +9,10 @@
 }
 
 .landing-content-container {
-  justify-content: center;
   align-items: center;
-  /* border: 2px solid green; */
-  width: 100%;
+
+  width: 80%;
+  margin: 0 auto;
   max-width: 1300px;
 }
 
@@ -23,7 +23,6 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  /* border: 1px solid red; */
 }
 @media screen and (min-width: 48rem) {
   .landing-picture {
